--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ p {
     display: inline-block;
 }
 
-.numbers div {
+.numbers div, .clear {
     display: inline-block;
     border: 1px solid #ddd;
     border-radius: 1px;
@@ -93,14 +93,14 @@ p {
     transition: border-color .2s ease-in-out, background-color .2s, box-shadow .2s;
 }
 
-.numbers div:hover {
+.numbers div:hover, .clear {
     background-color: #f1f1f1;
     -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
     border-color: #bbb;
 }
 
-.numbers div:active {
+.numbers div:active, .clear {
     font-weight: bold;
 }
 
@@ -129,3 +129,4 @@ p {
 .equal:active {
     font-weight: bold;
 }
+
